html confirmacion alta material

--- a/biblioteca_digital/views/templates/components/modificacion_materiales/modificacion_editar_material.html
+++ b/biblioteca_digital/views/templates/components/modificacion_materiales/modificacion_editar_material.html
@@ -223,3 +223,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 {% endblock %}
+
+{% block modals %}
+  {% include 'modals/detalles_material.html' %}
+{% endblock %}
