--- a/biblioteca_digital/views/templates/materiales/alta_material.html
+++ b/biblioteca_digital/views/templates/materiales/alta_material.html
@@ -85,6 +85,7 @@
 
 {% block extra_scripts %}
     <script src="{% static 'js/form_controler.js' %}" defer></script>
+    <script src="{% static 'js/modales/confirmacion_alta_material.js' %}" defer></script>
     <script>
     document.addEventListener("DOMContentLoaded", function () {
     const form = document.getElementById('form_alta_material');
